# hololens_mapper

./: .gitignore  combine_jsons.py  init.sh  visualize_positions.py
pipelines/: ARI_localizer.mg  localization_broca_hospital.mg  mapper.mg
src/colmap/: Colmap.py  ColmapIO.py  cameras.txt  check_images.py  log
src/meshroom/MeshroomCpp/: CMakeLists.txt
src/utils/: UtilsContainers.py  UtilsKeyframes.py  UtilsMath.py
